--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular-google-charts": "^2.0.0",
+    "ng2-google-charts": "^6.1.0",
+    "ng2-googlechart": "^2.21.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
