--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "angular-google-charts": "^2.0.0",
+    "chart.js": "^2.9.4",
     "ng2-google-charts": "^6.1.0",
     "ng2-googlechart": "^2.21.0",
     "rxjs": "~6.5.5",
