--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
     "angular-google-charts": "^2.0.0",
     "chart.js": "^2.9.4",
+    "cordova-sqlite-storage": "^5.1.0",
     "ng2-google-charts": "^6.1.0",
     "ng2-googlechart": "^2.21.0",
     "rxjs": "~6.5.5",
